--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </section>
 
       <section class="main-content">
-        <h3>After Class</h3>
+        <h3> What To Do After Class</h3>
         <hr>
         <p></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi eu leo magna. Vivamus at scelerisque tellus. Praesent ornare hendrerit accumsan. Duis viverra aliquet dui, at imperdiet ex mollis ac. Integer volutpat cursus lorem, eu placerat sem bibendum nec. Suspendisse id dolor nisl. In venenatis libero sit amet erat dignissim, non facilisis ante vestibulum. Cras eu dui ornare ipsum mollis elementum ut at ex. Curabitur nec hendrerit mauris. Morbi feugiat neque ligula, sed porta erat sodales at. Ut porta id magna eu iaculis.</p>
         
